--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DSN="sql12646713:MPvjBcldR6@tcp(127.0.0.1:3306)/sql12646713?charset=utf8mb4&parseTime=True&loc=Local"
+DSN="sql12646713:MPvjBcldR6@tcp(sql12.freesqldatabase.com:3306)/sql12646713?charset=utf8mb4&parseTime=True&loc=Local"
 PORT="3000"
